prevent select from overflowing parent

--- a/src/components/SearchableSelect/SearchableSelect.less
+++ b/src/components/SearchableSelect/SearchableSelect.less
@@ -12,6 +12,7 @@
 		cursor: pointer;
 		height: @SearchableSelect-size-controlHeight;
 		display: flex;
+		overflow: hidden;
 		outline: none;
 		border: 1px solid @featured-color-default-borderColor;
 		border-radius: @size-borderRadius;
